--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,11 +2,13 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
-    "target": "es6",
+    "target": "ES2022",
+    "lib": ["ES2022"],
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
-  },
-  "lib": ["es2015"]
+    "outDir": "dist",
+    "strict": true,
+    "skipLibCheck": true
+  }
 }
 
